--- a/Icons. Typography/css/layout.css
+++ b/Icons. Typography/css/layout.css
@@ -1,6 +1,80 @@
-.goodbye {
+@media (min-width: 400px) {
+  .goodbye {
   text-align: center;
+  margin: 5% 0;
+  }
+  .info {
+  text-align: center;
+  margin: 1% 0 5% 0;
+  }
+  .main_header {
+  text-align: center;
+  margin-bottom: 15%;
+  }
+  .main_header_logo {
+    margin: 30% 0 10% 0;
+  }
+  img {
+    display: none;
+  }
+  .links {
+    text-align: center;
+  }
+  .links a {
+    display: inline-block;
+    margin: 1em;
+  }
+  .subscribe_email {
+  display: none;
+  text-align: center;
+  }
+  #email {
+    margin: 5% 0 1% 0;
+  }
+  input[type="submit"] {
+    width: 15em;
+    border-radius: 10%;
+    margin: 1em 0 0 1em;
+    letter-spacing: .1em;
+  }
 }
-.info {
-  display: inline;
+
+/* -----New Screen Size For Viewports: Min Width 550px---- */
+
+@media (min-width: 550px) {
+  img {
+    display: block;
+    margin-top: 1%;
+  }
+  .subscribe_email {
+    display: block;
+    margin: 2em 0;
+  }
+  .subscribe_email_header {
+    font-size: 1em;
+    text-transform: uppercase;
+  }
+  .info {
+    display: block;
+    margin: 0 0 .3em 0;
+    clear: both;
+    text-align: right;
+  }
+  .main_header {
+    margin: 2em 0 0 0;
+  }
+  .main_header_logo {
+    margin: 5% 0;
+    text-align: left;
+  }
+  .main_header_nav_ul {
+    margin-top: 5em;
+  }
+}
+
+/* For Larger Viewports - - Desktop Shit */
+@media (min-width: 1100px) {
+  .main_header_nav_ul {
+    margin-top: 2em;
+  }
 }
