--- a/Icons. Typography/css/layout.css
+++ b/Icons. Typography/css/layout.css
@@ -1,20 +1,25 @@
 @media (min-width: 400px) {
   .goodbye {
-  text-align: center;
-  margin: 5% 0;
+    text-align: center;
+    margin: 5% 0;
   }
-  .info {
+  /*.info {
   text-align: center;
   margin: 1% 0 5% 0;
+  }*/
+  .info {
+    display: block;
+    height: auto;
+    margin: .5em auto;
   }
   .main_header {
-  text-align: center;
-  margin-bottom: 15%;
+    text-align: center;
+    margin-bottom: 15%;
   }
   .main_header_logo {
     margin: 30% 0 10% 0;
   }
-  img {
+  .slider {
     display: none;
   }
   .links {
@@ -25,8 +30,8 @@
     margin: 1em;
   }
   .subscribe_email {
-  display: none;
-  text-align: center;
+    display: none;
+    text-align: center;
   }
   #email {
     margin: 5% 0 1% 0;
@@ -36,6 +41,7 @@
     border-radius: 10%;
     margin: 1em 0 0 1em;
     letter-spacing: .1em;
+    font-size: .9em
   }
 }
 
@@ -46,12 +52,14 @@
     display: block;
     margin-top: 1%;
   }
+  .slider {
+    display: block;
+  }
   .subscribe_email {
     display: block;
     margin: 2em 0;
   }
   .subscribe_email_header {
-    font-size: 1em;
     text-transform: uppercase;
   }
   .info {
@@ -64,14 +72,30 @@
     margin: 2em 0 0 0;
   }
   .main_header_logo {
-    margin: 5% 0;
+    margin: 1em 0 1em 5em;
     text-align: left;
   }
   .main_header_nav_ul {
-    margin-top: 5em;
+    margin-top: 4em;
+  }
+  .btn_emailsubscribe {
+    width: 15em;
+    height: 4em;
+    border-radius: 10%;
+    letter-spacing: .1em;
+    font-size: .9em;
+    border: .15em solid black;
+    background-color: white;
+    box-shadow: 0 black 0 #006599;
+    color: black ;
+    cursor: pointer;
+    font: inherit;
+    margin: 1em 0 1em 1em;
+    outline: 0;
+    padding: 12px 20px;
+    text-transform: uppercase;
   }
 }
-
 /* For Larger Viewports - - Desktop Shit */
 @media (min-width: 1100px) {
   .main_header_nav_ul {
