--- a/Icons. Typography/css/state.css
+++ b/Icons. Typography/css/state.css
@@ -1,8 +1,81 @@
 @media (min-width: 400px) {
-li a:hover {
-  color: orange;
-}
-a:visited {
+  li a:hover {
+    color: orange;
+    transition: color .4s ease-in;
+  }
+  a:visited {
     color: black;
+  }
+}
+
+@media (min-width: 550px) {
+  @-webkit-keyframes slider {
+    0% { left: 0%; }
+    25% { left: 0%; }
+    31% { left: -100%; }
+    65% { left: -100%; }
+    70% { left: -200%; }
+    90% { left: -200%; }
+    100% { left: -300%; }
+  }
+  @-moz-keyframes slider {
+    0% { left: 0%; }
+    25% { left: 0%; }
+    31% { left: -100%; }
+    65% { left: -100%; }
+    70% { left: -200%; }
+    90% { left: -200%; }
+    100% { left: -300%; }
+  }
+  @-o-keyframes slider {
+    0% { left: 0%; }
+    25% { left: 0%; }
+    31% { left: -100%; }
+    65% { left: -100%; }
+    70% { left: -200%; }
+    90% { left: -200%; }
+    100% { left: -300%; }
+  }
+  @-ms-keyframes slider {
+    0% { left: 0%; }
+    25% { left: 0%; }
+    31% { left: -100%; }
+    65% { left: -100%; }
+    70% { left: -200%; }
+    90% { left: -200%; }
+    100% { left: -300%; }
+  }
+  .slider {
+    width: 80%;
+    max-width: 1000px;
+    overflow: hidden;
+  }
+  .slider figure {
+    position: relative;
+    width: 500%;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+    text-align: left;
+    -webkit-animation: 30s slider infinite;
+    -moz-animation: 30s slider infinite;
+    -o-animation: 30s slider infinite;
+    -ms-animation: 30s slider infinite;
+  }
+  .slider figure img {
+    width: 20%;
+    height: auto;
+    float: left;
+  }
+  .btn_emailsubscribe:active {
+    box-shadow: 0 1em 0 black;
+    transform: translateY(.5em);
+  }
+  .btn_emailsubscribe {
+    transition: all .1s linear;
+    -webkit-transition: all .1s linear;
+    -moz-transition: all .1s linear;
+    -o-transition: all .1s linear;
+    -ms-transition: all .1s linear;
   }
 }
